Use strong params and rails 7 form constructs

--- a/app/views/oauth_clients/index.html.erb
+++ b/app/views/oauth_clients/index.html.erb
@@ -32,11 +32,11 @@
     You have the following client applications registered:
   </p>
   <% @client_applications.each do |client|%>
-    <% div_for client do %>
+    <div>
       <%= link_to client.name, oauth_client_path(client) %>-
         <%= link_to 'Edit', edit_oauth_client_path(client) %>
         <%= link_to 'Delete', oauth_client_path(client), :confirm => "Are you sure?", :method => :delete %>
-    <% end %>
+    </div>
   <% end %>
 <% end %>
 <br />
